# lyrics

./: .gitignore  Cargo.toml  README.md  run.sh  rustfmt.toml
.idx/: dev.nix
src/: main.rs
src/any/: macros.rs  mod.rs  mxm.rs  spinner.rs  uagent.rs
src/bot/: config.rs  irc.rs  mod.rs  twitch.rs
src/cli/: mod.rs
