[package]
name = "lyrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
fancy-regex = "0.13.0"
iced = { version = "0.13.1", features = ["image"], optional = true }
image = "0.25.2"
rand = "0.8.5"
reqwest = { version = "0.12.2", features = ["blocking"] }
serde = { version = "1.0.202", features = ["derive"], optional = true }
serde_json = "1.0.108"
tokio = "1.34.0"
viuer = "0.8.1"
